# Interlace

./: README.md  pyproject.toml
Interlace/: interlace.py
Interlace/lib/: threader.py
Interlace/lib/core/: input.py
